--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "task-manager",
   "version": "1.0.0",
-  "description": "",
+  "description": "A basic task manager api",
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
     "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Akash Nai",
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
