--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
+    "test": "env-cmd -f ./config/test.env jest --watch"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "Akash Nai",
@@ -23,6 +27,7 @@
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
+    "jest": "^23.6.0",
     "nodemon": "^2.0.19"
   }
 }
